--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.jquery</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.7.1</version>
+            <version>1.7.2-1</version>
         </dependency>
     </dependencies>
 
